# gridlight_rast

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: sol.hpp
math/: Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
model/: Model.cpp  Model.h  Vertex.cpp  Vertex.h
renderer/: Renderer.cpp  Renderer.h
scene/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h
scripts/: main.lua  run_shaders.lua  setup.lua  test_shaders.lua
